# PDFAgentStreamlit

./: .replit  Pasted--Data-Description-Reference-Data-Files-1-Ideal-Set-of-Parameters-00-Ideal-set-of-paramete-1730795061252.txt  Pasted-AttributeError-SummaryAgent-object-has-no-attribute-conversation-history-Traceback-File-h-1730795689658.txt  Pasted-Product-Search-Phase-1-1-Identify-Market-Segment-As-the-customer-speaks-about-barrette-proteich-1730799690497.txt  main.py  pyproject.toml  replit.nix
assets/: style.css
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: Analysis.tsx  FileUpload.tsx  Header.tsx  QuestionAnswer.tsx
products/: hardware_solutions.md  software_products.json
reference_data/: 01_Classification_New.csv  01_Technical_parameters_per_Production_Technique.csv  03_Nutrition.csv  04_Allergens.csv
utils/: agent_progress.py  database.py  pdf_processor.py  product_matcher.py  qa_engine.py
utils/agents/: __init__.py  base_agent.py  coordinator.py  market_segment_agent.py  pdf_agent.py  phase1_search_agent.py  phase2_search_agent.py  product_recommendation_agent.py  qa_agent.py  recommendation_agent.py  requirement_extractor_agent.py  summary_agent.py
