[project]
name = "repl-nix-pdfagentstreamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-sql>=1.10",
    "numpy>=2.1.3",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "phidata>=2.5.30",
    "pyodbc>=5.2.0",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
]
