[project]
name = "repl-nix-pdfagentstreamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "numpy>=2.1.3",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "phidata>=2.5.30",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.17",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
]
